--- a/templates/base.html
+++ b/templates/base.html
@@ -34,34 +34,38 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-            {% block username %}
-          <a class="navbar-brand" href="#">Project name</a>
-            {% endblock %}
+
+          <a class="navbar-brand" href="./">{% block username %}{% endblock %}</a>
+
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             {% block handle %}
           <ul class="nav navbar-nav">
-            <li class="active"><a href="./">首页</a></li>
-            <li><a href="#about">关于</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li role="separator" class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
-            </li>
+            <li ><a href="./">库存</a></li>
+            <li ><a href="sale">销售</a></li>
+            <li ><a href="buy">进货</a></li>
+            <li ><a href="return">退货</a></li>
+            <li ><a href="adduser">添加用户</a></li>
+{#            <li><a href="#contact">Contact</a></li>#}
+{#            <li class="dropdown">#}
+{#              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>#}
+{#              <ul class="dropdown-menu">#}
+{#                <li><a href="#">Action</a></li>#}
+{#                <li><a href="#">Another action</a></li>#}
+{#                <li><a href="#">Something else here</a></li>#}
+{#                <li role="separator" class="divider"></li>#}
+{#                <li class="dropdown-header">Nav header</li>#}
+{#                <li><a href="#">Separated link</a></li>#}
+{#                <li><a href="#">One more separated link</a></li>#}
+{#              </ul>#}
+{#            </li>#}
+          {% block navbar %}{% endblock %}
           </ul>
             {% endblock %}
           <ul class="nav navbar-nav navbar-right">
 {#            <li><a href="../navbar/">Default</a></li>#}
             <li><a href="./logout">注销</a></li>
-            <li class="active"><a href="./">登录 <span class="sr-only">(current)</span></a></li>
+            <li><a href="./">登录 <span class="sr-only">(current)</span></a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
