添加商品种类和信息

--- a/templates/base.html
+++ b/templates/base.html
@@ -41,10 +41,12 @@
         <div id="navbar" class="navbar-collapse collapse">
             {% block handle %}
           <ul class="nav navbar-nav">
-            <li ><a href="./">库存</a></li>
+            <li ><a href="stock">库存</a></li>
             <li ><a href="sale">销售</a></li>
             <li ><a href="buy">进货</a></li>
             <li ><a href="return">退货</a></li>
+            <li ><a href="add_goods">添加商品</a></li>
+            <li ><a href="add_type">添加种类</a></li>
             <li ><a href="adduser">添加用户</a></li>
 {#            <li><a href="#contact">Contact</a></li>#}
 {#            <li class="dropdown">#}
