--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
 
     <script src="/static/bootstrap/js/jquery.min.js"></script>
     <script src="/static/bootstrap/js/bootstrap.min.js"></script>
-
+    {% block headmore%}{% endblock %}
   </head>
 
   <body>
