--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@
             <li ><a href="return">退货</a></li>
             <li ><a href="add_goods">添加商品</a></li>
             <li ><a href="add_type">添加种类</a></li>
-            <li ><a href="adduser">添加用户</a></li>
+            <li ><a href="add_user">添加用户</a></li>
 {#            <li><a href="#contact">Contact</a></li>#}
 {#            <li class="dropdown">#}
 {#              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>#}
