--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
             <li ><a href="stock">库存</a></li>
             <li ><a href="sale">销售</a></li>
             <li ><a href="buy">进货</a></li>
-            <li ><a href="return">退货</a></li>
+            <li ><a href="return_goods">退货</a></li>
             <li ><a href="add_goods">添加商品</a></li>
             <li ><a href="add_type">添加种类</a></li>
             <li ><a href="add_user">添加用户</a></li>
