--- a/templates/return_goods.html
+++ b/templates/return_goods.html
@@ -7,7 +7,7 @@
         {
             row_count++;
             var table1 = $('#table1');
-            var row = $("<tr class='submitSale'></tr>");
+            var row = $("<tr class='submitReturn'></tr>");
             row.append("<td><input type='checkbox' name='count' value='New' placeholder=''></td>");
             row.append("<td><input type='text' name='goods_id' placeholder=''></td>");
             row.append("<td><input type='number' name='quantity' placeholder=''></td>");
@@ -41,39 +41,39 @@
             return y + '-' + m + '-' + d+' '+h+':'+minute+':'+second;
         }
 
-        function sale() {   //提交销售信息
+        function return_goods() {   //提交退货信息
             var msg = {};
             var count = 0;
-            $(".submitSale").each(function () {
+            $(".submitReturn").each(function () {
                var id = $(this).find("input[type='text']").val();
                var quantity = $(this).find("input[type='number']").val();
                msg[count] = {'id': id, 'quantity': quantity};
                count += 1;
             });
             $.post(
-                '/sale',
+                '/return_goods',
                 JSON.stringify(msg),
                 function(data){
                     var sale_list = jQuery.parseJSON(data);
-                    // 打印销售单
+                    // 打印退货单
                     var result = $("<div class='panel panel-default'> <div class='panel-heading'> <h2 class='panel-title'>销售单 </h2></div> </div>");
                     var body = $("<div class='panel-body'></div>");
-                    body.append("<div>单号：" + sale_list['sale_id'] + "</div>");
-                    body.append("<div>销售员：" + sale_list['username'] + "</div>");
+                    body.append("<div>单号：" + sale_list['return_id'] + "</div>");
+                    body.append("<div>退货员：" + sale_list['username'] + "</div>");
                     body.append("<div>时间：" + formatDateTime(parseInt(sale_list['time'])*1000) + "</div>");
-                    var table = $("<table class='table'><tr><th>编号</th><th>名称</th><th>单价</th><th>数量</th><th>金额</th></tr></table>");
+                    var table = $("<table class='table'><tr><th>编号</th><th>名称</th><th>进货价</th><th>数量</th><th>金额</th></tr></table>");
                     var list = sale_list['list'];
                     $.each(list,function(name,value) {
                         var row = $("<tr></tr>");
                         row.append("<td>" + value['goods_id'] + "</td>");
                         row.append("<td>" + value['goods_name'] + "</td>");
-                        row.append("<td>" + value['price'] + "</td>");
+                        row.append("<td>" + value['buying_price'] + "</td>");
                         row.append("<td>" + value['goods_quantity'] + "</td>");
                         row.append("<td>" + value['tot_price'] + "</td>");
                         table.append(row);
                     });
                     body.append(table);
-                    body.append("<div>" + sale_list['total'] + "</div>");
+                    body.append("<div>总额：" + sale_list['total'] + "</div>");
                     result.append(body);
                     $("table input").each(function () {   //清空输入的内容
                         $(this).val("");
@@ -91,7 +91,7 @@
 
 {% block container %}
     <div class="container" style="width: 600px;">
-        <h2>销售</h2>
+        <h2>退货</h2>
         <input class="btn btn-primary" type="button" value="添加" onclick="addNew();">
         <input class="btn btn-primary" type="button" value="删除" onclick="del();">
         <form id="submitForm">
@@ -101,7 +101,7 @@
                 <th>编号</th>
                 <th>数量</th>
             </tr>
-            <tr class="submitSale">
+            <tr class="submitReturn">
                 <td><input type="checkbox" name="count" value="New" placeholder=""></td>
                 <td><input type="text" name="goods_id" placeholder=""></td>
                 <td><input type="number" name="quantity" placeholder=""></td>
@@ -109,7 +109,7 @@
             </tr>
         </table>
         </form>
-    <button class="btn btn-primary" type="button" onclick="sale();">销售</button>
+    <button class="btn btn-primary" type="button" onclick="return_goods();">退货</button>
         <hr>
         <div id="result"></div>
 
